--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "bin": {
     "roninz-i18n-cli": "./bin/index.js"
   },
@@ -12,5 +11,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "prettier": "^2.1.2"
+  }
 }
